Added password update

--- a/Survey/Survey.csproj
+++ b/Survey/Survey.csproj
@@ -148,6 +148,9 @@
     <EmbeddedResource Include="Forms\TestManagement.resx">
       <DependentUpon>TestManagement.cs</DependentUpon>
     </EmbeddedResource>
+    <EmbeddedResource Include="Forms\UserManagement.resx">
+      <DependentUpon>UserManagement.cs</DependentUpon>
+    </EmbeddedResource>
     <EmbeddedResource Include="Properties\Messages.resx">
       <Generator>ResXFileCodeGenerator</Generator>
       <LastGenOutput>Messages.Designer.cs</LastGenOutput>
