--- a/Survey/Survey.csproj
+++ b/Survey/Survey.csproj
@@ -133,6 +133,7 @@
     <Compile Include="Question.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Services\Security.cs" />
     <Compile Include="Test.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
