--- a/Survey/Survey.csproj
+++ b/Survey/Survey.csproj
@@ -77,6 +77,9 @@
     <Compile Include="Answer.cs">
       <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
+    <Compile Include="Audit.cs">
+      <DependentUpon>Model1.tt</DependentUpon>
+    </Compile>
     <Compile Include="Forms\Main.cs">
       <SubType>Form</SubType>
     </Compile>
